--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.activity:activity-ktx:1.2.0-alpha01'
     implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha01'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
     implementation 'com.google.android.material:material:1.2.0-alpha05'
 
