Add login page and security service

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 28
 
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 
     defaultConfig {
         applicationId "dev.ph0ndragx.insuranceadjusterapp"
@@ -58,6 +62,9 @@ dependencies {
     implementation 'com.google.android.libraries.places:places:2.2.0'
 
     kapt 'com.android.databinding:compiler:3.1.4'
+
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
